# legion

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE.md  Makefile  README.md  clear.bat  clippy.toml  deny.toml  diff_no_local_data.patch  legion.toml  monorepo.local.toml  monorepo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  tailwind.config.cjs  trace-1638297965.json
apps/data-build-cli/: Cargo.toml
apps/data-build-cli/src/: main.rs
apps/data-build-cli/tests/: tests.rs
apps/editor/: Cargo.toml
apps/editor/resources/: main_window.htm
apps/src-ctl-cli/: Cargo.toml  Design.md  README.md
apps/src-ctl-cli/doc/: Design.md  build.bat
apps/src-ctl-cli/src/: main.rs
apps/src-ctl-cli/tests/: local_repo_tests.rs
client/analytics-web/: .eslintrc.js  Cargo.toml  README.md  build.rs  index.html  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.js  vue.config.js
client/analytics-web/frontend/: README.md  jest.config.js  package.json  tailwind.config.js  vite.config.js
client/analytics-web/frontend/src/: App.svelte  index.ts
client/analytics-web/frontend/tests/: index.test.ts  stress-cumulative-call-graph.js
client/analytics-web/src/: App.svelte  App.vue  config.rs  main.js  main.rs
client/analytics-web/src/actions/: .gitkeep
client/analytics-web/src/components/: ProcessList.svelte  process-list.vue
client/analytics-web/src/lib/: .gitkeep
client/analytics-web/src/pages/: About.svelte  Home.svelte  Log.svelte  Timeline.svelte
client/analytics-web/src/proto/: analytics.ts  analytics_grpc_web_pb.js  analytics_pb.js  block.ts  block_pb.js  process.ts  process_pb.js  stream_pb.js
client/analytics-web/src/router/: index.js
client/analytics-web/src/views/: Home.vue  Log.vue  Timeline.vue
client/data-build-cli/: Cargo.toml
client/data-build-cli/src/: main.rs  scrape.rs
client/data-build-cli/src/data-build/: main.rs
client/data-build-cli/src/scrape/: config.rs  main.rs
client/data-build-cli/tests/: tests.rs
client/editor/: Cargo.toml  README.md  build.rs  package.json  tauri.conf.json
client/editor-svelte/: Cargo.toml  README.md  build.rs  tauri.conf.json
client/editor-svelte/frontend/: .eslintrc  .eslintrc.js  .gitignore  README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.js
client/editor-svelte/frontend/src/: App.svelte  index.ts
client/editor-svelte/perf-report/src/: edition_latency.rs
client/editor-svelte/src/: config.rs  main.rs
client/editor/frontend/: .eslintrc  .gitignore  README.md  jest.config.cjs  jest.config.js  nuxt.config.js  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
client/editor/frontend/components/: AppBar.vue  EditToolBar.vue  Logo.vue  PropertyGrid.vue  ResourceProperties.vue  ResourcePropertyEditor.vue  ResourceSelector.vue  Video.vue
client/editor/frontend/layouts/: default.vue
client/editor/frontend/pages/: about.vue  index.vue  inspire.vue
client/editor/frontend/plugins/: vue-json-pretty.js
client/editor/frontend/src/: App.vue  index.ts
client/editor/frontend/tests/: index.test.ts
client/editor/perf-report/src/: edition_latency.rs  main.rs
client/editor/src/: build.rs  config.rs  main.rs  video.js
client/editor/src-tauri/: Cargo.toml  tauri.conf.json
client/editor/src-tauri/src/: build.rs  main.rs
client/editor/src/components/: HelloWorld.vue
client/editor/static/: main.htm
client/editor/static/styles/: main.css
client/lsc/: Cargo.toml  README.md
client/lsc/src/: main.rs
client/lsc/tests/: local_repo_tests.rs
client/runtime/: Cargo.toml  tauri.conf.json
client/runtime/frontend/: README.md  index.html  jest.config.cjs  jest.config.js  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js
client/runtime/frontend/src/: App.svelte  index.ts
client/runtime/src/: config.rs  main.rs
client/telemetry-dump/: Cargo.toml  README.md
client/telemetry-dump/src/: main.rs  process_log.rs  process_metrics.rs  process_search.rs  process_thread_events.rs  recent_processes.rs
client/telemetry-dump/tests/: test_local_telemetry.rs
client/telemetry-dump/tests/data/: telemetry.db3
clients/data-build-cli/: Cargo.toml
clients/data-build-cli/src/: main.rs
clients/data-build-cli/tests/: tests.rs
compiler/debugcube/: Cargo.toml  build.rs
compiler/debugcube/src/: lib.rs  main.rs
compiler/entitydc/: Cargo.toml  build.rs
compiler/entitydc/src/: lib.rs  main.rs
compiler/instancedc/: Cargo.toml  build.rs
compiler/instancedc/src/: lib.rs  main.rs
compiler/material/: Cargo.toml
compiler/material/src/: lib.rs  main.rs
compiler/psd2tex/: Cargo.toml
compiler/psd2tex/src/: lib.rs  main.rs
compiler/runtime-entity/: Cargo.toml
compiler/runtime-entity/src/: lib.rs  main.rs
compiler/runtime-instance/: Cargo.toml
compiler/runtime-instance/src/: lib.rs  main.rs
compiler/test-atoi/: Cargo.toml
compiler/test-atoi/src/: lib.rs  main.rs
compiler/test-base64/: Cargo.toml
compiler/test-base64/src/: lib.rs  main.rs
compiler/test-refs/: Cargo.toml
compiler/test-refs/src/: lib.rs  main.rs
compiler/test-reverse/: Cargo.toml
compiler/test-reverse/src/: lib.rs  main.rs
compiler/test-split/: Cargo.toml
compiler/test-split/src/: lib.rs  main.rs
compiler/testentity/: Cargo.toml  build.rs
compiler/testentity/src/: lib.rs  main.rs
compiler/tex2bin/: Cargo.toml
compiler/tex2bin/src/: lib.rs  main.rs
compilers/test/: Cargo.toml
compilers/test/src/: main.rs
compilers/test/tests/: tests.rs
core/app/: Cargo.toml
core/app/src/: app.rs  ci_testing.rs  lib.rs  plugin.rs  schedule_runner.rs
core/asset/: Cargo.toml
core/asset/src/: asset_server.rs  assets.rs  handle.rs  info.rs  lib.rs  loader.rs  path.rs
core/asset/src/io/: file_asset_io.rs  mod.rs
core/core/: Cargo.toml
core/core/src/: bytes.rs  float_ord.rs  label.rs  lib.rs  name.rs  task_pool_options.rs
core/core/src/time/: stopwatch.rs  (+3 more)
(+5192 files in other folders)
