[workspace]
members = [
    "client/*",
    "server/*",
    "lib/*",
    "plugin/*",
    "proto/*",
    "test/*",
    "compiler/*",
]
exclude = []

[profile.dev]
panic = 'abort'

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
panic = 'abort'

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false
panic = 'abort'
