[workspace]
members = [
    "client/*",
    "server/*",
    "lib/*",
    "plugin/*",
    "proto/*",
    "test/*",
    "compiler/*",
    "build/monorepo",
    "build/workspace-hack",
]
exclude = []

[profile.dev]
panic = 'abort'

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
panic = 'abort'

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false
panic = 'abort'

# this is one of the real time-critical sections of the code
# We want it optimal even even in dev mode
# Further application will come with this: https://github.com/ralfbiedert/openh264-rust/pull/11
[profile.dev.package.openh264-sys2]
opt-level = 3
