[package]
name = "editor"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
sciter-js = { git = "https://github.com/legion-labs/sciter-js-rs", branch = "main" }
