[package]
name = "analytics-web"
version = "0.1.0"
edition = "2021"
description = "The Analytics client"
authors = ["devs@legionlabs.com"]
repository = ""
default-run = "analytics-web"
license = "MIT OR Apache-2.0"
keywords = ["game", "legion", "analytics"]

[dependencies]
axum = "0.4.2"
tokio = { version = "1.14.0", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["fs"] }

[build-dependencies]
lgn-build-utils = { path = "../../lib/build-utils", version = "0.1.0", features = ["web-appgen"] }