[package]
name = "lgn-data-build-cli"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "data-build"
path = "src/data-build/main.rs"
doc = false

[[bin]]
name = "data-scrape"
path = "src/scrape/main.rs"

[dependencies]
byteorder = "1.4"
clap = { version = "3.0", features = ["derive"] }
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
lgn-data-build = { path = "../../lib/data-build", version = "0.1.0" }
lgn-data-compiler = { path = "../../lib/data-compiler", version = "0.1.0" }
lgn-content-store = { path = "../../lib/content-store", version = "0.1.0" }
lgn-data-offline = { path = "../../lib/data-offline", version = "0.1.0" }
lgn-data-runtime = { path = "../../lib/data-runtime", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.2.0"
refs-resource = { path = "../../lib/data-offline/test-refs-resource", version = "0.1.0" }
text-resource = { path = "../../lib/data-offline/test-text-resource", version = "0.1.0" }
integer-asset = { path = "../../lib/data-runtime/test-integer-asset", version = "0.1.0" }
refs-asset = { path = "../../lib/data-runtime/test-refs-asset", version = "0.1.0" }
