[package]
name = "editor-client-svelte"
version = "0.1.0"
edition = "2021"
description = "The Legion editor client"
authors = ["devs@legionlabs.com"]
repository = ""
default-run = "editor-client-svelte"
license = "MIT OR Apache-2.0"
keywords = ["game", "legion"]

[build-dependencies]
tauri-build = "1.0.0-beta.4"
which = "4.2.2"

[dependencies]
legion-app = { path = "../../lib/app", version = "0.1.0" }
#legion-telemetry = { path = "../../lib/telemetry" }
legion-ecs = { path = "../../lib/ecs", version = "0.1.0" }
#legion-online = { path = "../../lib/online", version = "0.1.0" }
legion-async = { path = "../../plugin/async", version = "0.1.0" }
legion-tauri = { path = "../../plugin/tauri", version = "0.1.0" }
#legion-streaming-proto = { path = "../../proto/streaming", version = "0.1.0" }
#legion-editor-proto = { path = "../../proto/editor", version = "0.1.0" }
#legion-analytics = { path = "../../lib/analytics", version = "0.1.0" }
#legion-transit = { path = "../../lib/transit", version = "0.1.0" }
anyhow = "1.0.44"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
base64 = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
log = "0.4"
regex = "1.5"
url = "2.2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
