[package]
name = "editor-client"
version = "0.1.0"
edition = "2021"
description = "Legion Editor client"
authors = ["devs@legionlabs.com"]
repository = ""
default-run = "editor-client"
license = "MIT OR Apache-2.0"
keywords = ["game", "legion"]

[build-dependencies]
tauri-build = "1.0.0-beta.4"
which = "4.2.2"

[dependencies]
legion-app = { path = "../../lib/app", version = "0.1.0" }
legion-telemetry = { path = "../../lib/telemetry" }
legion-ecs = { path = "../../lib/ecs", version = "0.1.0" }
legion-online = { path = "../../lib/online", version = "0.1.0" }
legion-async = { path = "../../plugin/async", version = "0.1.0" }
legion-grpc = { path = "../../plugin/grpc", version = "0.1.0" }
legion-tauri = { path = "../../plugin/tauri", version = "0.1.0" }
legion-streaming-proto = { path = "../../proto/streaming", version = "0.1.0" }
legion-editor-proto = { path = "../../proto/editor", version = "0.1.0" }
anyhow = "1.0.44"
clap = "2.33"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
base64 = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
json = "0.12.4"
log = "0.4"
simple_logger = "1.13"
legion-analytics = { path = "../../lib/analytics" }
transit = { path = "../../lib/transit" }
regex = "1.5"
url = "2.2.2"
sqlx = { version = "0.5", features = [
    "sqlite",
    "any",
    "mysql",
    "runtime-tokio-native-tls",
] }
directories = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "perf-report"
path = "perf-report/src/main.rs"
