[package]
name = "editor-client"
version = "0.1.0"
edition = "2021"
description = "The Legion editor client"
authors = ["devs@legionlabs.com"]
repository = ""
default-run = "editor-client"
license = "MIT OR Apache-2.0"
keywords = ["game", "legion"]

[dependencies]
lgn-app = { path = "../../lib/app", version = "0.1.0" }
lgn-telemetry = { path = "../../lib/telemetry", version = "0.1.0" }
lgn-ecs = { path = "../../lib/ecs", version = "0.1.0" }
lgn-async = { path = "../../plugin/async", version = "0.1.0" }
lgn-online = { path = "../../lib/online", version = "0.1.0" }
lgn-tauri = { path = "../../plugin/tauri", version = "0.1.0" }
lgn-analytics = { path = "../../lib/analytics", version = "0.1.0" }
lgn-transit = { path = "../../lib/transit", version = "0.1.0" }
lgn-browser = { path = "../../lib/browser", version = "0.1.0" }
anyhow = "1.0.44"
clap = "2.33"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
base64 = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
json = "0.12.4"
regex = "1.5"
url = "2.2.2"
sqlx = { version = "0.5", features = [
    "sqlite",
    "any",
    "mysql",
    "runtime-tokio-native-tls",
] }
directories = "4"

[build-dependencies]
lgn-build-utils = { path = "../../lib/build-utils", version = "0.1.0" }
lgn-build-utils-web = { path = "../../lib/build-utils-web", version = "0.1.0" }
tauri-build = "1.0.0-beta.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "perf-report"
path = "perf-report/src/main.rs"
