[package]
name = "lsc"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
legion-source-control = { path = "../../lib/source-control" }
legion-telemetry = { path = "../../lib/telemetry" }
tokio = { version = "1.12", features = ["full"] }

[dev-dependencies]
test-utils = { path = "../../lib/test-utils" }
