[package]
name = "lsc"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2.33"
lgn-source-control = { path = "../../lib/source-control", version = "0.1.0" }
lgn-telemetry = { path = "../../lib/telemetry", version = "0.1.0" }
lgn-telemetry-sink = { path = "../../lib/telemetry-sink", version = "0.1.0" }
log = "0.4"
tokio = { version = "1.13", features = ["full"] }

[dev-dependencies]
lgn-test-utils = { path = "../../lib/test-utils", version = "0.1.0" }
