[package]
name = "runtime-client"
version = "0.1.0"
edition = "2021"
description = "The runtime engine streaming client"
authors = ["devs@legionlabs.com"]
repository = ""
default-run = "runtime-client"
license = "MIT OR Apache-2.0"
keywords = ["game", "legion"]

[dependencies]
# Legion engine
lgn-app = { path = "../../lib/app", version = "0.1.0" }
lgn-tauri = { path = "../../plugin/tauri", version = "0.1.0" }

# others
clap = "2.33"
url = "2.2.2"
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }

[build-dependencies]
lgn-build-utils = { path = "../../lib/build-utils", version = "0.1.0", features = [
    "web-appgen",
] }
tauri-build = "1.0.0-beta.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
