[package]
name = "telemetry-dump"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33"
legion-telemetry = { path = "../../lib/telemetry" }
legion-analytics = { path = "../../lib/analytics" }
transit = { path = "../../lib/transit" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [
    "sqlite",
    "any",
    "mysql",
    "runtime-tokio-native-tls",
] }
anyhow = "1.0"
prost = "0.8"
lz4 = "1.23"

[dev-dependencies]
test-utils = { path = "../../lib/test-utils" }
fs_extra = "1.2"
