[package]
name = "telemetry-dump"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33"
legion-telemetry = { path = "../../lib/telemetry", version = "0.1.0" }
legion-analytics = { path = "../../lib/analytics", version = "0.1.0" }
legion-transit = { path = "../../lib/transit", version = "0.1.0" }
tokio = { version = "1.13", features = ["full"] }
sqlx = { version = "0.5", features = [
    "sqlite",
    "any",
    "mysql",
    "runtime-tokio-native-tls",
] }
anyhow = "1.0"
prost = "0.9"
lz4 = "1.23"
json = "0.12"

[dev-dependencies]
legion-test-utils = { path = "../../lib/test-utils" }
fs_extra = "1.2"
