[package]
name = "compiler-debugcube"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
legion-data-offline = { path = "../../lib/data-offline" }
legion-data-runtime = { path = "../../lib/data-runtime" }
legion-data-compiler = { path = "../../lib/data-compiler" }
generic_data_offline = { path = "../../test/generic_data_offline", version = "0.1.0" }
generic_data_runtime = { path = "../../test/generic_data_runtime", version = "0.1.0" }
bincode = "1.3.3"

[build-dependencies]
legion-data-codegen = { path = "../../lib/data-codegen", version = "0.1.0" }
