[package]
name = "lgn-compiler-instancedc"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doc = false

[[bin]]
name = "compiler-instancedc"
path = "src/main.rs"
doc = false

[dependencies]
lgn-data-offline = { path = "../../lib/data-offline" }
lgn-data-runtime = { path = "../../lib/data-runtime" }
lgn-data-compiler = { path = "../../lib/data-compiler" }
generic-data = { path = "../../test/generic-data", version = "0.1.0", features = [
    "offline",
    "runtime",
] }
bincode = "1.3.3"

[build-dependencies]
lgn-data-codegen = { path = "../../lib/data-codegen", version = "0.1.0" }
