[package]
name = "compiler-material"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doc = false

[[bin]]
name = "compiler-material"
doc = false

[dependencies]
lgn-data-offline = { path = "../../lib/data-offline", version = "0.1.0" }
lgn-data-runtime = { path = "../../lib/data-runtime", version = "0.1.0" }
lgn-graphics-runtime = { path = "../../lib/graphics-runtime", version = "0.1.0" }
lgn-graphics-offline = { path = "../../lib/graphics-offline", version = "0.1.0" }
lgn-data-compiler = { path = "../../lib/data-compiler", version = "0.1.0" }
