[package]
name = "compiler-runtime-entity"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
legion-data-compiler = { path = "../../lib/data-compiler" }
legion-data-offline = { path = "../../lib/data-offline" }
legion-data-runtime = { path = "../../lib/data-runtime" }
# temp dependency on sample-data, until runtime data moved to plugins
sample-data-offline = { path = "../../test/sample-data-offline", version = "0.1.0" }
sample-data-runtime = { path = "../../test/sample-data-runtime", version = "0.1.0" }
sample-data-compiler = { path = "../../test/sample-data-compiler", version = "0.1.0" }
bincode = "1.3.3"
