[package]
name = "compiler-test-atoi"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doc = false

[[bin]]
name = "compiler-test-atoi"
doc = false

[dependencies]
lgn-data-compiler = { path = "../../lib/data-compiler", version = "0.1.0" }
lgn-data-runtime = { path = "../../lib/data-runtime", version = "0.1.0" }
text-resource = { path = "../../lib/data-offline/test-text-resource" }
integer-asset = { path = "../../lib/data-runtime/test-integer-asset" }
