[package]
name = "compiler-test-base64"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doc = false

[[bin]]
name = "compiler-test-base64"
doc = false

[dependencies]
base64 = "0.13.0"
lgn-data-compiler = { path = "../../lib/data-compiler", version = "0.1.0" }
lgn-data-runtime = { path = "../../lib/data-runtime", version = "0.1.0" }
text-resource = { path = "../../lib/data-offline/test-text-resource" }
binary-resource = { path = "../../lib/data-offline/test-binary-resource" }
