[package]
name = "lgn-compiler-test-refs"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doc = false

[[bin]]
name = "compiler-test-refs"
path = "src/main.rs"
doc = false

[dependencies]
lgn-data-compiler = { path = "../../lib/data-compiler", version = "0.1.0" }
lgn-data-runtime = { path = "../../lib/data-runtime", version = "0.1.0" }
refs-resource = { path = "../../lib/data-offline/test-refs-resource" }
refs-asset = { path = "../../lib/data-runtime/test-refs-asset" }
