[package]
name = "lgn-compiler-test-split"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doc = false

[[bin]]
name = "compiler-test-split"
path = "src/main.rs"
doc = false

[dependencies]
lgn-data-compiler = { path = "../../lib/data-compiler", version = "0.1.0" }
lgn-data-runtime = { path = "../../lib/data-runtime", version = "0.1.0" }
lgn-data-offline = { path = "../../lib/data-offline", version = "0.1.0" }
multitext-resource = { path = "../../lib/data-offline/test-multitext-resource" }
text-resource = { path = "../../lib/data-offline/test-text-resource" }
