[package]
name = "lgn-compiler-testentity"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doc = false

[[bin]]
name = "compiler-testentity"
path = "src/main.rs"
doc = false

[dependencies]
lgn-data-offline = { path = "../../lib/data-offline", version = "0.1.0" }
lgn-data-runtime = { path = "../../lib/data-runtime", version = "0.1.0" }
lgn-data-compiler = { path = "../../lib/data-compiler", version = "0.1.0" }
lgn-data-model = { path = "../../lib/data-model", version = "0.1.0" }
generic-data = { path = "../../test/generic-data", version = "0.1.0", features = [
    "offline",
    "runtime",
] }
bincode = "1.3.3"

[build-dependencies]
lgn-data-codegen = { path = "../../lib/data-codegen", version = "0.1.0" }
