[package]
name = "lgn-compiler-tex2bin"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doc = false

[[bin]]
name = "compiler-tex2bin"
path = "src/main.rs"
doc = false

[dependencies]
lgn-data-runtime = { path = "../../lib/data-runtime", version = "0.1.0" }
lgn-graphics-runtime = { path = "../../lib/graphics-runtime", version = "0.1.0" }
lgn-graphics-offline = { path = "../../lib/graphics-offline", version = "0.1.0" }
lgn-data-compiler = { path = "../../lib/data-compiler", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
