[package]
name = "compiler-test"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion-data-compiler = { path = "../../modules/data-compiler" }
legion-resources = { path = "../../modules/resources" }
legion-assets = { path = "../../modules/assets" }

[[bin]]
name = "compiler-test"
doc = false