[package]
name = "legion-app"
version = "0.1.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Provides core App functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
bevy_ci_testing = ["serde", "ron"]
default = ["legion_reflect"]

[dependencies]
# bevy
legion_derive = { path = "../derive", package = "legion-derive", version = "0.1.0" }
legion_ecs = { path = "../ecs", package = "legion-ecs", version = "0.1.0" }
legion_reflect = { path = "../reflect", package = "legion-reflect", version = "0.1.0", optional = true }
legion_utils = { path = "../utils", package = "legion-utils", version = "0.1.0" }

# other
serde = { version = "1.0", features = ["derive"], optional = true }
ron = { version = "0.6.2", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Window"] }

[dev-dependencies]
# bevy
#bevy_log = { path = "../bevy_log", version = "0.5.0" }
