[package]
name = "legion-app"
version = "0.1.0"
edition = "2018"
description = "Provides core App functionality for Legion"
homepage = "https://legionengine.com"
repository = "https://github.com/legion-labs/legion"
license = "MIT OR Apache-2.0"
keywords = ["legion"]

[features]
trace = []
legion_ci_testing = ["serde", "ron"]

[dependencies]
# legion
legion-derive = { path = "../derive", version = "0.1.0" }
legion-ecs = { path = "../ecs", version = "0.1.0" }
legion-utils = { path = "../utils", version = "0.1.0" }

# other
serde = { version = "1.0", features = ["derive"], optional = true }
ron = { version = "0.6.4", optional = true }

[dev-dependencies]
# legion
legion-transform = { path = "../transform", version = "0.1.0" }
