[package]
name = "legion-asset"
version = "0.1.0"
edition = "2018"
description = "Provides asset functionality for Legion Engine"
homepage = "https://legionengine.com"
repository = "https://github.com/legion-labs/legion"
license = "MIT OR Apache-2.0"
keywords = ["legion"]

[features]
default = ["filesystem_watcher"]
filesystem_watcher = ["notify"]

[dependencies]
# Legion
legion-app = { path = "../app", version = "0.1.0" }
legion-ecs = { path = "../ecs", version = "0.1.0" }
legion-tasks = { path = "../tasks", version = "0.1.0" }
legion-utils = { path = "../utils", version = "0.1.0" }

# other
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5.0"
anyhow = "1.0.4"
thiserror = "1.0"
downcast-rs = "1.2.0"
notify = { version = "=5.0.0-pre.11", optional = true }
parking_lot = "0.11.0"
rand = "0.8.0"

[dev-dependencies]
futures-lite = "1.4.0"
tempfile = "3.2.0"
