[package]
name = "legion-core"
version = "0.1.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Provides core functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]


[dependencies]
# bevy
legion_app = { path = "../app", package = "legion-app", version = "0.1.0" }
legion_derive = { path = "../derive", package = "legion-derive", version = "0.1.0" }
legion_ecs = { path = "../ecs", package = "legion-ecs", version = "0.1.0" }
legion_math = { path = "../math", package = "legion-math", version = "0.1.0" }
legion_reflect = { path = "../reflect", package = "legion-reflect", version = "0.1.0", features = [
    "bevy",
] }
legion_tasks = { path = "../tasks", package = "legion-tasks", version = "0.1.0" }
legion_utils = { path = "../utils", package = "legion-utils", version = "0.1.0" }

# other
bytemuck = "1.5"
