[package]
name = "legion-core"
version = "0.1.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Provides core functionality for Legion"
homepage = "https://legionengine.com"
repository = "https://github.com/legion-labs/legion"
license = "MIT OR Apache-2.0"
keywords = ["legion"]

[dependencies]
# legion
legion-app = { path = "../app", version = "0.1.0" }
legion-derive = { path = "../derive", version = "0.1.0" }
legion-ecs = { path = "../ecs", version = "0.1.0" }
legion-math = { path = "../math", version = "0.1.0" }
legion-reflect = { path = "../reflect", version = "0.1.0", features = [
    "legion",
], optional = true }
legion-tasks = { path = "../tasks", version = "0.1.0" }
legion-utils = { path = "../utils", version = "0.1.0" }

# other
bytemuck = "1.5"
